--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/office-js": "^1.0.401",
     "docxtemplater": "^3.48.0",
     "file-saver": "^2.0.5",
+    "office-js": "^0.1.0",
+    "officegen": "^0.6.5",
     "pizzip": "^3.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
