--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@types/office-js": "^1.0.401",
+    "@microsoft/office-js": "^1.1.93",
+    "docx": "^8.5.0",
     "docxtemplater": "^3.48.0",
+    "express": "^4.19.2",
     "file-saver": "^2.0.5",
-    "office-js": "^0.1.0",
+    "mammoth": "^1.8.0",
     "officegen": "^0.6.5",
+    "pdf-lib": "^1.17.1",
     "pizzip": "^3.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,12 +37,15 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "@types/office-js": "^1.0.401",
+    "@types/typescript": "^2.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "office-js": "^0.1.0",
     "typescript": "~5.4.2"
   }
 }
