--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pizzip": "^3.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xmldom": "^0.6.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/office-js": "^1.0.401",
     "@types/typescript": "^2.0.0",
+    "@types/xmldom": "^0.1.34",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
