--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "docxtemplater": "^3.48.0",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
     "mammoth": "^1.8.0",
     "officegen": "^0.6.5",
