--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@microsoft/office-js": "^1.1.93",
+    "@xmldom/xmldom": "^0.8.10",
     "docx": "^8.5.0",
     "docxtemplater": "^3.48.0",
     "express": "^4.19.2",
+    "fflate": "^0.8.2",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jszip": "^3.10.1",
@@ -31,6 +33,7 @@
     "pizzip": "^3.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xml2js": "^0.6.2",
     "xmldom": "^0.6.0",
     "zone.js": "~0.14.3"
   },
@@ -42,6 +45,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/office-js": "^1.0.401",
     "@types/typescript": "^2.0.0",
+    "@types/xml2js": "^0.4.14",
     "@types/xmldom": "^0.1.34",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
